tests/sema/fail/match_struct_partial.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

struct Point { int x; int y; }

int main() {
  Point p = Point { 1, 2 };
  return p match {
    Point { 0, 0 } => 0,
  };
}
